@@ -4,6 +4,7 @@ import java.util.List;
 
 import net.minecraft.block.BlockOre;
 import net.minecraft.block.properties.IProperty;
+import net.minecraft.block.properties.PropertyEnum;
 import net.minecraft.block.state.BlockState;
 import net.minecraft.block.state.IBlockState;
 import net.minecraft.creativetab.CreativeTabs;
@@ -20,6 +21,21 @@ import com.hea3ven.dulcedeleche.industry.metal.Metal;
 
 public class BlockMetalOre extends BlockOre {
 
+	public static Metal[] ORES = new Metal[] {Metal.COPPER, Metal.TIN};
+	public static final PropertyEnum METAL_ORE = PropertyEnum.create("metal", Metal.class, ORES);
+
+	// TODO: fix this later
+	private int[] metaByIndex = new int[] {-1, 0, 1, -1};
+	private int[] indexByMeta = new int[] {1, 2};
+
+	public static Metal getMetal(IBlockState state) {
+		return (Metal) state.getValue(METAL_ORE);
+	}
+
+	public static IBlockState setMetal(IBlockState state, Metal metal) {
+		return state.withProperty(METAL_ORE, metal);
+	}
+
 	@Override
 	public EnumWorldBlockLayer getBlockLayer() {
 		return EnumWorldBlockLayer.CUTOUT_MIPPED;
@@ -27,29 +43,29 @@ public class BlockMetalOre extends BlockOre {
 
 	@Override
 	protected BlockState createBlockState() {
-		return new BlockState(this, new IProperty[] {Metal.METAL_ORE});
+		return new BlockState(this, new IProperty[] {METAL_ORE});
 	}
 
 	@Override
 	public int getMetaFromState(IBlockState state) {
-		return Metal.getMetalOre(state).getOreIndex();
+		return metaByIndex[getMetal(state).ordinal()];
 	}
 
 	@Override
 	public IBlockState getStateFromMeta(int meta) {
-		return Metal.setMetalOre(getDefaultState(), Metal.getOre(meta));
+		return setMetal(getDefaultState(), Metal.get(indexByMeta[meta]));
 	}
 
 	@Override
 	public void getSubBlocks(Item itemIn, CreativeTabs tab, List list) {
-		for (Metal metal : Metal.ORES) {
-			list.add(new ItemStack(this, 1, metal.getOreIndex()));
+		for (Metal metal : ORES) {
+			list.add(new ItemStack(this, 1, metaByIndex[metal.ordinal()]));
 		}
 	}
 
 	@SideOnly(Side.CLIENT)
 	public int getRenderColor(IBlockState state) {
-		return Metal.getMetalOre(state).getColor();
+		return getMetal(state).getColor();
 	}
 
 	@Override
