@@ -7,6 +7,7 @@ import com.google.common.collect.Lists;
 import net.minecraft.block.Block;
 import net.minecraft.item.ItemColored;
 
+import com.hea3ven.dulcedeleche.industry.block.BlockMetalOre;
 import com.hea3ven.dulcedeleche.industry.metal.Metal;
 
 public class ItemMetalOre extends ItemColored {
@@ -15,7 +16,7 @@ public class ItemMetalOre extends ItemColored {
 		super(block, true);
 
 		List<String> names = Lists.newArrayList();
-		for (Metal metal : Metal.ORES) {
+		for (Metal metal : BlockMetalOre.ORES) {
 			names.add(metal.getName());
 		}
 		setSubtypeNames(names.toArray(new String[names.size()]));
