@@ -2,3 +2,4 @@
     * Add assembler block that can automatically craft recipes.
     * Add copper and tin ore.
     * Add copper and tin ingots.
+    * Add copper, tin and iron nuggets.
